--- a/WebContent/financeiro/pagar/findContasPagar.xhtml
+++ b/WebContent/financeiro/pagar/findContasPagar.xhtml
@@ -252,10 +252,10 @@
 								</p:tab>
 								<p:tab title="Pedidos">
 									<div class="ui-g">
-										<div class="ui-g-12">
+										<div class="ui-g-2 ui-lg-6 ui-sm-12">
 											<h:panelGroup id="botoesPedido">
 
-												<div class="ui-g-12 ui-lg-3">
+												<div class="ui-g-12 ui-lg-6">
 													<p:commandButton value="Movimentar o Pedido"
 														style="height:40px; background: greenyellow !important  ;   
 														background-color: greenyellow; 
@@ -267,6 +267,10 @@
 														rendered="#{contasPagarBean.pedidoModel.idPedido > 0 and (contasPagarBean.pedidoModel.status eq 'EM')}" />
 														<p:outputLabel value="Nenhum Pedido Pendente Selecionado" 
 														rendered="#{contasPagarBean.pedidoModel.idPedido == null or (contasPagarBean.pedidoModel.status ne 'EM')}" />
+												</div>
+												
+												<div class="ui-g-12 ui-lg-5">
+													<p:outputLabel value="" />
 												</div>
 												
 												<div class="ui-g-12 ui-lg-1">
@@ -283,7 +287,7 @@
 									</div>
 
 									<div class="ui-g">
-										<div class="ui-g-2 ui-lg-12 ui-sm-12">
+										<div class="ui-g-2 ui-lg-6 ui-sm-12">
 											<p:dataTable value="#{contasPagarBean.lstPedido}" var="d"
 												emptyMessage="Não há dados" rowKey="#{d.idPedido}"
 												selectionMode="single" id="tablePedido" rows="10"
@@ -330,7 +334,6 @@
 											color:white !important;
 											font-size:large; "
 										action="#{contasPagarBean.aprovarPedido}" immediate="true"
-										oncomplete="PF('pedidosDialog').hide()"
 										update="botoesPedidoSelecionado" />
 								</div>
 
@@ -340,6 +343,7 @@
 												background-color: red; 
 												color:white !important;
 												font-size:large; "
+												action="#{contasPagarBean.reprovarPedido}"
 										immediate="true" update="botoesPedidoSelecionado" />
 								</div>
 								<div class="ui-g-12 ui-lg-3">
@@ -359,7 +363,7 @@
 									rows="10" paginator="true" paginatorPosition="bottom	">
 
 									<!-- <p:ajax event="rowSelect"
-										listener="#{contasPagarBean.onRowSelectEstoque}" update="tablePedidoSelecionado" /> -->
+										listener="#{contasPagarBean.onRowSelectEstoque}" update="tablePedidaoSelecionado" /> -->
 
 									<p:ajax event="cellEdit"
 										listener="#{contasPagarBean.onCellEdit}"
@@ -388,7 +392,7 @@
 												<h:outputText value="#{d.valorUnitario}" />
 											</f:facet>
 											<f:facet name="input">
-												<p:inputText value="#{d.valorUnitario}" style="width:96%"
+												<p:inputText value="#{d.valorUnitario}" style="width:96%"  
 													label="Valor Unitário" />
 											</f:facet>
 										</p:cellEditor>
